<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">在花园</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="request_data">加载网络数据...</string>
	<string name="request_data_error">加载网络数据出错</string>
	<string name="find">寻觅</string>
	<string name="message">消息</string>
	<string name="world">世界</string>
	<string name="mine">我的</string>
	<string name="common_layout_topbarlayout_title_text">标题</string>
	<dimen name="common_layout_topbarlayout_title_size">20dp</dimen>
	<string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_loading">Loading</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_footer_hint_loading">加载中...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_last_time">最后更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_nomore_hint">没有更多的数据</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="user_name">账号</string>
    <string name="user_pw">密码</string>
    <string name="back_password1">新密码</string>
    <string name="back_password2">再次输入密码</string>

    <string name="image_content_description">"image_content_description"</string>
    <string name="register_is_null">"邮箱、密码、昵称 不能为空"</string>
    <string name="register_success">"注册成功"</string>
    <string name="register_failure">"注册失败"</string>
    <string name="register_input_email">"输入邮箱"</string>
    <string name="register_input_password">"输入密码"</string>
    <string name="register_input_nickname">"输入昵称"</string>
    <string name="register_btn_argee">"注册"</string>
    <string name="register_email_error">"邮箱地址不合法"</string>
    <!-- login activity -->
    <string name="login_edit_username">"用户名"</string>
    <string name="login_edit_password">"密码"</string>
    <string name="login_btn_register">"注册"</string>
    <string name="login_btn_login">"登录"</string>
    <string name="login_success">"登录成功"</string>
    <string name="login_failure">"登录失败"</string>
    <string name="login_erro_is_null">"用户名、密码不能为空"</string>
    <string name="login_version_date">"日期:%1$s"</string>
    <string name="login_version_code">"版本:%1$s"</string>
    <!-- functions  activity-->
    <string name="function_list_logout">"注 销 用 户"</string>
    <!-- custom service  activity-->
    <string name="custom_service_get_list_failure">"获取客服失改"</string>
    <string name="custom_service_people_list">"客服人员列表"</string>

    <string name="register_user_exits">"该邮箱已注册"</string>
    <string name="login_username_error">"登录帐号不存在请注册"</string>
    <string name="login_pass_error">"密码错误"</string>
    <string name="no_read_message">"···"</string>

    <string name="delete_from_balck">删除黑名单</string>
    <string name="cancle_black">取消</string>
    <string name="network_not">当前网络不可用</string>
    <string name="connect_fail">连接失败,将离线登陆</string>


    <string name="de_notification_set">勿扰模式</string>
    <string name="de_notification_start">开始时间</string>
    <string name="de_notification_end">结束时间</string>
    <string name="de_notification_status_no">当前未设置push屏蔽时间</string>
    <string name="de_notification_status_yes">当前设置push屏蔽时间为：</string>
    <string name="de_notification_information">开启后，在设定时间段内收到新消息时不会响铃或振动。</string>
    <string name="str_turn_back">取消</string>
    <string name="str_forward">确认</string>
    <string name="title_activity_setting">SettingActivity</string>
</resources>
