<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bottom_bar_normal_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/btn_container_find"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_find"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_bottom_item_bg"
                android:drawableTop="@drawable/tab_find_bg"
                android:onClick="onTabClicked"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/find"
                android:textColor="@color/main_botton_text_color"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_container_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_bottom_item_bg"
                android:drawableTop="@drawable/tab_message_bg"
                android:onClick="onTabClicked"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/message"
                android:textColor="@color/main_botton_text_color"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_container_world"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_world"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_bottom_item_bg"
                android:drawableTop="@drawable/tab_world_bg"
                android:onClick="onTabClicked"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/world"
                android:textColor="@color/main_botton_text_color"
                android:textSize="12sp" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/btn_container_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_mine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_bottom_item_bg"
                android:drawableTop="@drawable/tab_mine_bg"
                android:onClick="onTabClicked"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/mine"
                android:textColor="@color/main_botton_text_color"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_bottom" />
    

</RelativeLayout>
